<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.talent.a202220624_marktalent_nycschools.view.ScoreActivity"

    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp"
            android:background="@color/black"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:contentDescription="@string/back_arrow"
                android:src="@drawable/ic_backios_foreground"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/tv_school_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="start"
                android:padding="4dp"
                android:textColor="@color/teal_900"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck"
                tools:text="School's name" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_two_cards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_SAT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:layout_marginBottom="5dp"
                    android:elevation="2dp"
                    android:padding="5dp"
                    app:cardCornerRadius="8dp">

                    <RelativeLayout
                        android:id="@+id/score_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <TextView
                            android:id="@+id/tv_sat_scores"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/SAT_scores"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/math_scores"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_above="@id/reading_scores"
                            android:layout_marginTop="2dp"
                            android:gravity="start"
                            android:padding="4dp"
                            android:text="@string/math_score_lb"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_math_scores"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_sat_scores"
                            android:layout_marginStart="150dp"
                            android:layout_marginTop="1dp"
                            android:gravity="center"
                            android:padding="4dp"
                            android:textSize="18sp"
                            tools:text="Math Scores" />

                        <TextView
                            android:id="@+id/reading_scores"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_above="@id/tv_writing_scores"
                            android:layout_marginTop="2dp"
                            android:gravity="start"
                            android:padding="4dp"
                            android:text="@string/reading_score_lb"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/tv_reading_scores"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_math_scores"
                            android:layout_marginStart="150dp"
                            android:layout_marginTop="1dp"
                            android:gravity="center"
                            android:padding="4dp"
                            android:textSize="18sp"
                            tools:text="Reading Scores" />

                        <TextView
                            android:id="@+id/writing_scores"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_reading_scores"
                            android:layout_marginTop="2dp"
                            android:gravity="start"
                            android:padding="4dp"
                            android:text="@string/writting_score_lb"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_writing_scores"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_reading_scores"
                            android:layout_marginStart="150dp"
                            android:layout_marginTop="1dp"
                            android:gravity="center"
                            android:padding="4dp"
                            android:textSize="18sp"
                            tools:text="Writing Scores" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:layout_marginBottom="5dp"
                    android:elevation="2dp"
                    android:padding="5dp"
                    app:cardCornerRadius="8dp">

                    <RelativeLayout
                        android:id="@+id/tv_address_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:padding="4dp"
                            android:text="@string/address_lb"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="100dp"
                            android:layout_marginTop="1dp"
                            android:gravity="start"
                            android:padding="4dp"
                            android:text="@string/school_address"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/address"
                            android:gravity="start"
                            android:padding="4dp"
                            android:text="@string/email_lb"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/address"
                            android:layout_marginStart="100dp"
                            android:layout_marginTop="10dp"
                            android:gravity="start"
                            android:text="@string/school_email"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/website"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/email"
                            android:layout_marginTop="2dp"
                            android:gravity="start"
                            android:padding="4dp"
                            android:text="@string/website_lb"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_website"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_email"
                            android:layout_marginStart="100dp"
                            android:layout_marginTop="6dp"
                            android:gravity="start"
                            android:padding="4dp"
                            android:text="@string/website_address"
                            android:textSize="14sp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_overview2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:layout_marginBottom="5dp"
                    android:elevation="2dp"
                    android:padding="5dp"
                    app:cardCornerRadius="8dp">
                    <RelativeLayout
                        android:id="@+id/overview_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="2dp"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/overview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:text="@string/overview_lb"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_overview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="55dp"
                            android:text="@string/overview_lb"
                            android:textAlignment="viewStart"
                            android:textSize="18sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>